Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 </head>
 <body>
 <!-- My photo :) -->
-<p><img src="me.jpg" alt="TheBusyDev in disguise :)" class="profile-photo"></p>
-<h1 id="pietro-businaro">Pietro Businaro</h1>
+<img src="me.jpg" alt="Pietro Businaro" class="profile-photo">
+<div class="name">
+Pietro Businaro
+</div>
+<div class="easter-egg">
+…aka TheBusyDev in disguise :)
+</div>
 <h3 id="msc.-in-aeronautical-engineering">MSc. in Aeronautical
 Engineering</h3>
 <!-- My contacts -->
@@ -36,7 +41,8 @@ Engineering</h3>
 href="maito:pietro.businaro@outlook.com">pietro.businaro@outlook.com</a>
  • <a
 href="https://www.linkedin.com/in/pietro-businaro">LinkedIn</a> • <a
-href="https://github.com/TheBusyDev">GitHub</a></p>
+href="https://github.com/TheBusyDev">GitHub</a> • <a
+href="https://thebusydev.github.io/">My Website</a></p>
 </div>
 <!-- Introduction -->
 <div class="intro">
