Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 <body>
 <!-- My photo :) -->
 <img src="me.jpg" alt="Pietro Businaro" class="profile-photo">
-<div class="name">
+<h1 class="name">
 Pietro Businaro
-</div>
-<div class="easter-egg">
+</h1>
+<h1 class="easter-egg">
 …aka TheBusyDev in disguise :)
-</div>
+</h1>
 <h3 id="msc.-in-aeronautical-engineering">MSc. in Aeronautical
 Engineering</h3>
 <!-- My contacts -->
