Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ Engineering, focusing on <strong>Fluid Dynamics</strong> and
 <strong>Finite Volume</strong> and <strong>Finite Element</strong>
 simulations and coding in <code>C++</code> and <code>Python</code>. Some
 of my personal projects are visible at my <a
-href="https://github.com/TheBusyDev">GitHub page</a>.</p>
+href="https://github.com/TheBusyDev">GitHub page</a>.<br />
+<strong>Language skills:</strong> <ins>English</ins> - C1 (TOEIC
+certificate: score 975/990), <ins>Italian</ins> - native speaker.</p>
 </div>
 <!-- START TWO-COLUMN LAYOUT -->
 <div class="two-column">
