--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@ Engineering</h3>
 <div class="contact-info">
 <p><a
 href="maito:pietro.businaro@outlook.com">pietro.businaro@outlook.com</a>
- • <a
-href="https://www.linkedin.com/in/pietro-businaro">LinkedIn</a> • <a
-href="https://github.com/TheBusyDev">github.com/TheBusyDev</a> • <a
+• <a href="https://www.linkedin.com/in/pietro-businaro">LinkedIn</a> •
+<a href="https://github.com/TheBusyDev">github.com/TheBusyDev</a> • <a
 href="https://thebusydev.github.io/">Website</a></p>
 </div>
 <!-- Introduction -->
