Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 </head>
 <body>
 <!-- My photo :) -->
-<img src="me.jpg" alt="Pietro Businaro" class="profile-photo">
+<input type="checkbox" id="easter-egg-checkbox">
+<label for="easter-egg-checkbox">
+<img src="me.jpg" alt="Pietro Businaro" class="profile-photo"> </label>
 <h1 class="name">
 Pietro Businaro
 </h1>
-<h1 class="easter-egg">
+<h1 class="easter-egg-message">
 …aka TheBusyDev in disguise :)
 </h1>
 <h3 id="msc.-in-aeronautical-engineering">MSc. in Aeronautical
@@ -187,7 +189,7 @@ contributions are presented below.</p>
 <ul>
 <li><a href="https://lifex.gitlab.io/"><strong>lifex:</strong></a> This
 open-source project is focused on the development and validation of a
-software for <ins>cardiovascular applications</ins>, co-founded by
+software for <ins>cardiovascular applications</ins>, co-funded by
 Politecnico di Milano and European Research Council (ERC). The work from
 my Master’s Thesis aimed to develop a light-weight 1D solver, to be
 employed for efficient simulations of the <ins>blood flow in
