Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <!-- My photo :) -->
-<input type="checkbox" id="easter-egg-checkbox">
+<input type="checkbox" id="easter-egg-checkbox" hidden>
 <label for="easter-egg-checkbox">
 <img src="me.jpg" alt="Pietro Businaro" class="profile-photo"> </label>
 <h1 class="name">
