Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ di Milano that designs two racing motorcycles, competing in <a
 href="https://www.civ.tv/pilota/specialita-piloti/moto3/">Moto3
 championship</a> and in Electric category at <a
 href="https://www.motostudent.com/">Motostudent championship</a>.<br />
-My job focused on <ins>automating the CFD process</ins>, from the mesh
+My job focused on <ins>automating the CFD workflow</ins>, from the mesh
 generation (with <code>ANSA</code>) throughout the CFD simulation (using
 <code>OpenFOAM</code>) and the post-processing (involving data analysis
 with <code>ParaView</code>, <code>numpy</code>, <code>pandas</code> and
