Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ href="https://thebusydev.github.io/">Website</a></p>
 <!-- Introduction -->
 <div class="intro">
 <p>I am a graduate engineer from Politecnico di Milano (expected
-graduation at March 2026). I pursued a Master’s Degree in Aeronautical
+graduation: March 2026). I pursued a Master’s Degree in Aeronautical
 Engineering, focusing on <strong>Fluid Dynamics</strong> and
 <strong>CFD/numerical methods</strong>. I have experience in both
 <strong>Finite Volume</strong> and <strong>Finite Element</strong>
