Update GitHub pages

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ An excellent <code>Python</code> program to post-process
 <code>OpenFOAM</code> simulations, collecting and analyzing data with
 <code>pyvista</code>, <code>numpy</code>, <code>pandas</code> and
 <code>matplotlib</code>.</li>
-<li><strong>MOR:</strong> A project aiming to perform a Model Order
-Reduction (MOR) on 2D CFD simulations, exploiting
-<ins>Deep-learning-based ROMs</ins> (to appear).</li>
+<li><strong>MOR (to appear):</strong> A project aiming to perform a
+Model Order Reduction (MOR) on 2D CFD simulations, exploiting
+<ins>deep-learning based ROMs</ins>.</li>
 </ul>
 </section>
 <section id="programming-languages-software" class="card">
